// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the <GifExpertApp /> component should display a list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Fiat"
      key="Fiat"
    />
    <GifGrid
      category="Chebrolet"
      key="Chebrolet"
    />
  </ol>
</Fragment>
`;

exports[`Testing the <GifExpertApp /> component should render 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
  </ol>
</Fragment>
`;
